[gd_scene load_steps=16 format=2]

[ext_resource path="res://dep/fonts/EarlsRevenge-69Kg.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://dep/scripts/Main.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.25098, 0.231373, 0.341176, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
corner_detail = 16

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.807843, 0.34902, 0.258824, 1 )
border_width_left = 5
border_width_top = 10
border_width_right = 10
border_width_bottom = 5
border_color = Color( 0.94902, 0.411765, 0.27451, 1 )
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 16
anti_aliasing = false

[sub_resource type="Theme" id=3]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 2 )
Button/styles/pressed = null

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.14902, 0.180392, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.235294, 0.235294, 0.235294, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="DynamicFont" id=6]
size = 58
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.886275, 0.886275, 0.886275, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 3

[sub_resource type="Theme" id=9]
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = SubResource( 7 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = null

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )

[sub_resource type="DynamicFont" id=12]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=13]
default_font = SubResource( 12 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 25
custom_constants/margin_top = 30
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rows" type="VBoxContainer" parent="Inner"]
margin_left = 25.0
margin_top = 30.0
margin_right = 375.0
margin_bottom = 275.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="Title" type="VBoxContainer" parent="Inner/Rows"]
margin_right = 350.0
margin_bottom = 29.0

[node name="ItemContainer" type="HBoxContainer" parent="Inner/Rows/Title"]
margin_right = 350.0
margin_bottom = 29.0
rect_min_size = Vector2( 0, 10 )
alignment = 2

[node name="Button" type="Button" parent="Inner/Rows/Title/ItemContainer"]
margin_right = 350.0
margin_bottom = 29.0
rect_min_size = Vector2( 30, 10 )
size_flags_horizontal = 3
theme = SubResource( 3 )

[node name="GUI_Elems" type="Panel" parent="Inner/Rows"]
margin_top = 49.0
margin_right = 350.0
margin_bottom = 245.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="Margin" type="MarginContainer" parent="Inner/Rows/GUI_Elems"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 30
custom_constants/margin_left = 20
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Inner/Rows/GUI_Elems/Margin"]
margin_left = 20.0
margin_top = 30.0
margin_right = 330.0
margin_bottom = 182.0
size_flags_vertical = 3
custom_constants/separation = 35
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="PanelContainer" parent="Inner/Rows/GUI_Elems/Margin/Container"]
margin_right = 310.0
margin_bottom = 62.0
custom_styles/panel = SubResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="Inner/Rows/GUI_Elems/Margin/Container/Items"]
margin_left = 1.0
margin_top = 1.0
margin_right = 309.0
margin_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[center] [rainbow freq=0.1][wave amp=40]Testing[/wave] [/rainbow][/center]"
text = " Testing "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemContainer2" type="HBoxContainer" parent="Inner/Rows/GUI_Elems/Margin/Container"]
margin_top = 97.0
margin_right = 310.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 9 )
custom_constants/separation = 20

[node name="Minus" type="Button" parent="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2"]
self_modulate = Color( 0.988235, 0.27451, 0.27451, 1 )
margin_right = 90.0
margin_bottom = 55.0
size_flags_horizontal = 3
theme = SubResource( 11 )
text = "-"

[node name="Plus" type="Button" parent="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2"]
self_modulate = Color( 0.545098, 0.960784, 0.356863, 1 )
margin_left = 110.0
margin_right = 200.0
margin_bottom = 55.0
size_flags_horizontal = 3
theme = SubResource( 13 )
text = "+"

[node name="Reset" type="Button" parent="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2"]
self_modulate = Color( 1, 0.635294, 0.317647, 1 )
margin_left = 220.0
margin_right = 310.0
margin_bottom = 55.0
size_flags_horizontal = 3
text = "R"

[connection signal="gui_input" from="BG" to="." method="_on_BG_gui_input"]
[connection signal="pressed" from="Inner/Rows/Title/ItemContainer/Button" to="." method="_on_quit"]
[connection signal="pressed" from="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2/Minus" to="." method="_on_Minus"]
[connection signal="pressed" from="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2/Plus" to="." method="_on_Plus"]
[connection signal="pressed" from="Inner/Rows/GUI_Elems/Margin/Container/ItemContainer2/Reset" to="." method="_on_Reset"]
